--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=smash
+
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_ROOT_USERNAME}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Redis Config
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+
+# Swagger Configuration
+springdoc.swagger-ui.path=/swagger
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.paths-to-match=/api/**
