chore : 인프런 엔티티 설계

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,3 +38,5 @@ sido.filePath=${SIDO_FILEPATH}
 sigungu.filePath=${SIGUNGU_FILEPATH}
 jobCodeTop.filePath=${JOBCODETOP_FILEPATH}
 jobCodeMiddle.filePath=${JOBCODEMIDDLE_FILEPATH}
+industry.filePath=${INDUSTRY_FILEPATH}
+infra.filePath=${INFRA_FILEPATH}
