refeact : seed_version 환경 변수로 관리

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -37,6 +37,8 @@ apis.molit.base-url=${MOLIT_BASE_URL}
 apis.molit.path=${MOLIT_PATH}
 apis.molit.service-key=${MOLIT_SERVICE_KEY}
 
+seed.version=${SEED_VERSION}
+
 # csv filePath
 sido.filePath=${SIDO_FILEPATH}
 sigungu.filePath=${SIGUNGU_FILEPATH}
