--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -37,6 +37,11 @@ apis.molit.base-url=${MOLIT_BASE_URL}
 apis.molit.path=${MOLIT_PATH}
 apis.molit.service-key=${MOLIT_SERVICE_KEY}
 
+# YouthCenter Configuration
+apis.youthcenter.base-url=${YOUTH_BASE_URL}
+apis.youthcenter.path=${YOUTH_BASE_PATH}
+apis.youthcenter.api-key=${YOUTH_API_KEY}
+
 seed.version=${SEED_VERSION}
 
 # csv filePath
