docs : jobCount 배치 작업 위한 로직 추가

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -45,6 +45,7 @@ sido.filePath=${SIDO_FILEPATH}
 sigungu.filePath=${SIGUNGU_FILEPATH}
 jobCodeTop.filePath=${JOBCODETOP_FILEPATH}
 jobCodeMiddle.filePath=${JOBCODEMIDDLE_FILEPATH}
+jobCount.filePath=${JOBCOUNT_FILEPATH}
 industry.filePath=${INDUSTRY_FILEPATH}
 infra.filePath=${INFRA_FILEPATH}
 infraScore.filePath=${INFRASCORE_FILEPATH}
