refeact : DwellingBatchRunner dealYmd 하드 코딩 -> 환경변수 관리 수정

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -47,7 +47,7 @@ apis.youthcenter.path=${YOUTH_BASE_PATH}
 apis.youthcenter.api-key=${YOUTH_API_KEY}
 
 seed.version=${SEED_VERSION}
-
+dwelling.dealYmd=${DEALYMD}
 #csv file path
 sido.filePath=${SIDO_FILEPATH}
 sigungu.filePath=${SIGUNGU_FILEPATH}
