--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -58,6 +58,7 @@ population.filePath=${POPULATION_FILEPATH}
 ratelimit.window-seconds=${RATE_LIMIT_WINDOW_SECONDS}
 ratelimit.allowed-count=${RATE_LIMIT_ALLOWED_COUNT}
 ratelimit.lock-ttl-ms=${RATE_LIMIT_LOCK_TTL_MS}
+ratelimit.secret=${RATE_LIMIT_SECRET}
 
 # openAI
 openai.api-key=${OPENAI_API_KEY}
