refactor : 앱 시작 시 경고 로그 해결

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,6 +19,8 @@ spring.datasource-data.jdbc-url=${MYSQL_DATA_URL}
 spring.datasource-data.username=${MYSQL_DATA_USERNAME}
 spring.datasource-data.password=${MYSQL_DATA_PASSWORD}
 
+spring.jpa.open-in-view=false
+
 server.port=${SERVER_PORT}
 
 
