--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -76,3 +76,8 @@ openai.temperature=${OPENAI_TEMPERATURE}
 # work24
 worknet.base-url=${WORKNET_BASE_URL}
 worknet.path=${WORKNET_PATH}
+
+# log
+logging.level.root=INFO
+logging.level.org.apache.coyote.http11.Http11Processor=ERROR
+logging.level.org.springframework.security=INFO
